--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "author": "rengifolu <andrelujan7@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
@@ -18,6 +18,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.19",
     "vue": "^2.6.10",
+    "vue-avatar-editor-improved": "^1.0.4",
     "vue-router": "^3.0.1",
     "vue-session": "^1.0.0",
     "vuex": "^3.1.1",
